--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(mine_signal mine_signal.cpp)
 
-target_include_directories(mine_signal
+target_include_directories(mine_signal PUBLIC
                             ${PROJECT_SOURCE_DIR}/include)                   
