--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required(VERSION 3.9)
 
 project(mine)
 
+set(CMAKE_CXX_FLAGS -pthread)
+
 add_subdirectory(${PROJECT_SOURCE_DIR}/helper)
 add_subdirectory(${PROJECT_SOURCE_DIR}/test)
