create master and worker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(mine)
 
 set(CMAKE_CXX_FLAGS -pthread)
 
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
 add_subdirectory(${PROJECT_SOURCE_DIR}/helper)
 add_subdirectory(${PROJECT_SOURCE_DIR}/test)
 add_subdirectory(${PROJECT_SOURCE_DIR}/server)
+add_subdirectory(${PROJECT_SOURCE_DIR}/process)
+
