--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(mine_signal mine_signal.cpp)
 
-target_include_directories(mine_signal PUBLIC
-                            ${PROJECT_SOURCE_DIR}/include)                   
+add_executable(server server.cpp)
+
+target_link_libraries(server config daemonize process)
