--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(mine_signal mine_signal.cpp)
 
+add_library(log log.cpp)
+
 add_executable(server server.cpp)
 
 target_link_libraries(server config daemonize process)
